# CS116-2017-Margaux-Roulet

./: CMakeLists.txt  CMakeLists.txt~  README.md  main.cpp  network.cpp  network.hpp  neuron.cpp  neuron.hpp  neuron2.cpp  neuron2.hpp  test_oneNeuron.cpp  test_twoNeurons.cpp
gtest/: neuron_unittest.cpp
src/: .goutputstream-CXJQ8Y  network.cpp  network.hpp  neuron.cpp  neuron.hpp  test_multipleNeurons.cpp  test_oneNeuron.cpp  test_twoNeurons.cpp
